fixed nax align

--- a/scss/modules/_defaults.scss
+++ b/scss/modules/_defaults.scss
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-size: 62.5%;
+  // font-size: 62.5%;
   // background: radial-gradient(ellipse at center, $base 0, $darken 80%, $back 100%);
 }
 
