--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -10,14 +10,22 @@
   }
   .nav-bar {
     background-color: $silver;
-    position: relative;
-    display: block;
-    padding: 10px;
-    top: 9px;
-    padding-left: 150px;
-    font-size: 16px;
+    position: absolute;
+    // display: block;
+    // padding: 10px;
+    // top: 9px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto 0;
+    height: 60%;
+    padding-top: 13px;
+    padding-left: 145px;
+
   }
   .nav-bar li {
+    font-size: 16px;
     text-align: center;
     display: inline;
     padding: 14px 16px;
@@ -47,4 +55,8 @@
   width: 162px;
   height: 400px;
   padding: 15px;
+}
+
+.get-inv-header {
+  color: $meteor;
 }
