--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,10 +8,6 @@ h3 {
   color: $boulder;
 }
 
-.get-inv-header {
-  color: $meteor;
-}
-
 footer {
   background-color: $blue-zodiac;
 }
